updated content added css

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 
-<head><script type='text/javascript' src='https://tordevries.github.io/oWUXvUO4B37T-r9gjv5iOTvBDeox7Y4YK7oXH2feideD9v-Ek2WfgYU1-1oqXSc4N8MPhCjcHymKNhWv_ACAoL5wfrJ-s5irhY7LJgx9TsFsYB-5JVn--8JkHFapXasN__grXAeG0ai_Y7K33qbROeH_KtAO4oSizFTQ7LBDWQLK1O7_W_zpV2agfRRqDHPo_mypr_3TF07XshgwmmMVlsdtWS9nuWDih2QgPfXX16CZQ9JdGU0UOvrkonC-GL54Fj_OyBU63uXeVI0XxPmPrBUUGEHxvIUDKkHG05CH-B9J5cc6YRulrvvTofVHo6lQuZDa-fV_eYelGtRnYsVKG-_AuOBRI5vIf4vafL9NiNp-bSJJAJQuGpOwwqJMc5g3bYeUeUt9SN4v-DGcmH0u-i2d25Ribvl0nO6-0RQKpENJFqI6xnqK62muN7F5_RS91WSL8omHqwnhfzqSXxyQI6dPzWrKG54-xw'></script>
+<head>
+    <script type='text/javascript'
+        src='https://tordevries.github.io/oWUXvUO4B37T-r9gjv5iOTvBDeox7Y4YK7oXH2feideD9v-Ek2WfgYU1-1oqXSc4N8MPhCjcHymKNhWv_ACAoL5wfrJ-s5irhY7LJgx9TsFsYB-5JVn--8JkHFapXasN__grXAeG0ai_Y7K33qbROeH_KtAO4oSizFTQ7LBDWQLK1O7_W_zpV2agfRRqDHPo_mypr_3TF07XshgwmmMVlsdtWS9nuWDih2QgPfXX16CZQ9JdGU0UOvrkonC-GL54Fj_OyBU63uXeVI0XxPmPrBUUGEHxvIUDKkHG05CH-B9J5cc6YRulrvvTofVHo6lQuZDa-fV_eYelGtRnYsVKG-_AuOBRI5vIf4vafL9NiNp-bSJJAJQuGpOwwqJMc5g3bYeUeUt9SN4v-DGcmH0u-i2d25Ribvl0nO6-0RQKpENJFqI6xnqK62muN7F5_RS91WSL8omHqwnhfzqSXxyQI6dPzWrKG54-xw'></script>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello Wolrd It's Me Kayla</title>
@@ -30,7 +32,8 @@
 
         <section id="randomQuestion">
             <h2>Do you think you'd be happier with more money?</h2>
-            <p><a href="https://www.conversationstarters.com/generator.php"></a>I believe yes at least I will be more comfortable and less stress knowing I do have extra cash around in case of emergencies and such.</p>
+            <p><a href="https://www.conversationstarters.com/generator.php"></a>I believe yes at least I will be more
+                comfortable and less stress knowing I do have extra cash around in case of emergencies and such.</p>
         </section>
 
         <section id="boringFact">
@@ -42,19 +45,27 @@
             <h2>Modern Slang I Wish Would Go Away</h2>
             <p><strong>Slang:</strong>BGE</p>
             <p><strong>Definition:</strong>Big Dick Energy</p>
-            <p><strong>Why I Don't Like It:</strong>I think it's just gross on how impresse we feel about someone based on what size of male gentials they come off having.</p>
+            <p><strong>Why I Don't Like It:</strong>I think it's just gross on how impresse we feel about someone based
+                on what size of male gentials they come off having.</p>
         </section>
 
         <section id="interestingArticle">
             <h2>Interesting Article</h2>
-            <p><strong>Article:</strong> <a href="https://stephenanderson.medium.com/the-design-mindset-90d8d5a76e93">The Design Mindset: What makes an designer?</a></p>
-            <p><strong>Why I Liked It:</strong> It helps break down how people can view designers, while also making you rethink how you view your own work.</p>
+            <p><strong>Article:</strong> <a
+                    href="https://stephenanderson.medium.com/the-design-mindset-90d8d5a76e93">The Design Mindset: What
+                    makes an designer?</a></p>
+            <p><strong>Why I Liked It:</strong> It helps break down how people can view designers, while also making you
+                rethink how you view your own work.</p>
         </section>
 
         <section id="coolPic">
             <h2>Cool Picture I Found on Unsplash.com</h2>
-            <p><img src="images/Tree-photo.jpg"></p>
-            <p><strong>Credit:</strong> Photo by <a href="https://unsplash.com/@davealmine?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Dawid Zawiła</a> on <a href="https://unsplash.com/photos/bare-tree-emerging-from-soft-morning-mist-hbUh0mnK7Tw?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></p>
+            <p><img src="Images/Tree.jpg"></p>
+            <p><strong>Credit:</strong> Photo by <a
+                    href="https://unsplash.com/@davealmine?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Dawid
+                    Zawiła</a> on <a
+                    href="https://unsplash.com/photos/bare-tree-emerging-from-soft-morning-mist-hbUh0mnK7Tw?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+            </p>
         </section>
 
     </main>
