--- a/tp4/index.html
+++ b/tp4/index.html
@@ -2,7 +2,7 @@
 <head>
 		<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Tiny Project: Tic-Tac-Toe</title>
+	<title>Tiny Project 4: Tic-Tac-Toe</title>
 
 	
 	<link rel="stylesheet" href="styles.css" media="all">
