added some effects

--- a/tp4/index.html
+++ b/tp4/index.html
@@ -10,18 +10,16 @@
 
 <body>
     <div class="gameboard">
+        <div class="gamespace">x</div>
         <div class="gamespace"></div>
+        <div class="gamespace">o</div>
         <div class="gamespace"></div>
-        <div class="gamespace"></div>
-        <div class="gamespace"></div>
-        <div class="gamespace"></div>
-        <div class="gamespace"></div>
-        <div class="gamespace"></div>
+        <div class="gamespace">x</div>
+        <div class="gamespace">x</div>
+        <div class="gamespace">o</div>
         <div class="gamespace"></div>
         <div class="gamespace"></div>
     </div>
-
-
 
 </body>
 
