--- a/tp6/index.html
+++ b/tp6/index.html
@@ -11,7 +11,7 @@
 	<title>Tiny Project 6: Weather App</title>
 	<link rel="stylesheet" href="styles.css" media="all">
 <main>
-	<div id="Predictions">
+	<div id="PredictionBox">
 		<div class="Predictions"> First Predictions</div>
 		<div class="Predictions"> Second Predictions</div>
 		<div class="Predictions"> Third Predictions</div>
