--- a/tp5/index.html
+++ b/tp5/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<!-- meta tags and title -->
 	<meta charset="UTF-8">
@@ -8,15 +9,24 @@
 	<link rel="stylesheet" href="style.css" media="all">
 </head>
 
-<body>
-<div class="cardExample"> 
-  <div class="cardContent">
-   <div class="cardTop">Top</div>
-    <div class="cardBottom">Bottom</div>
-		<p><img src="Images/crown.jpg"></p>
-	  
- </div>
-</div>
+<div id="gameboard">
 
-</body>
+	<body>
+		<div class="cardExample">
+			<div class="cardContent">
+				<div class="cardTop">Top</div>
+				<div class="cardBottom">Bottom</div>
+			</div>
+		</div>
+
+			<div class="cardExample">
+				<div class="cardContent">
+					<div class="cardTop">Top</div>
+					<div class="cardBottom">Bottom</div>
+				</div>
+			</div>
+		</div>
+
+	</body>
+
 </html>
