--- a/tp5/index.html
+++ b/tp5/index.html
@@ -12,14 +12,14 @@
 <div id="gameboard">
 
 	<body>
-		<div class="cardExample">
+		<div class="cardPair1">
 			<div class="cardContent">
 				<div class="cardTop">Top</div>
 				<div class="cardBottom">Bottom</div>
 			</div>
 		</div>
 
-			<div class="cardExample">
+			<div class="cardPair1">
 				<div class="cardContent">
 					<div class="cardTop">Top</div>
 					<div class="cardBottom">Bottom</div>
