--- a/tp5/index.html
+++ b/tp5/index.html
@@ -25,6 +25,20 @@
 					<div class="cardBottom">Bottom</div>
 				</div>
 			</div>
+		<div class="cardPair2">
+			<div class="cardContent">
+				<div class="cardTop">Top</div>
+				<div class="cardBottom">Bottom</div>
+			</div>
+		</div>
+
+			<div class="cardPair2">
+				<div class="cardContent">
+					<div class="cardTop">Top</div>
+					<div class="cardBottom">Bottom</div>
+				</div>
+			</div>
+		
 		</div>
 
 	</body>
