--- a/tp5/index.html
+++ b/tp5/index.html
@@ -38,6 +38,34 @@
 					<div class="cardBottom">Bottom</div>
 				</div>
 			</div>
+
+			<div class="cardPair3">
+			<div class="cardContent">
+				<div class="cardTop">Top</div>
+				<div class="cardBottom">Bottom</div>
+			</div>
+		</div>
+
+			<div class="cardPair3">
+				<div class="cardContent">
+					<div class="cardTop">Top</div>
+					<div class="cardBottom">Bottom</div>
+				</div>
+			</div>
+		<div class="cardPair4">
+			<div class="cardContent">
+				<div class="cardTop">Top</div>
+				<div class="cardBottom">Bottom</div>
+			</div>
+		</div>
+
+			<div class="cardPair4">
+				<div class="cardContent">
+					<div class="cardTop">Top</div>
+					<div class="cardBottom">Bottom</div>
+				</div>
+			</div>
+		
 		
 		</div>
 
