updated TP5 and Tp6 layouts

--- a/tp5/index.html
+++ b/tp5/index.html
@@ -8,67 +8,71 @@
 	<title>Tiny Project 5: Layout for Concentration</title>
 	<link rel="stylesheet" href="style.css" media="all">
 </head>
+<body>
 
-<div id="gameboard">
-
-	<body>
-		<div class="cardPair1">
+	<div id="gameboard">
+	
+		<div class="card cardPair1">
 			<div class="cardContent">
 				<div class="cardTop">Top</div>
 				<div class="cardBottom">Bottom</div>
 			</div>
 		</div>
 
-			<div class="cardPair1">
-				<div class="cardContent">
-					<div class="cardTop">Top</div>
-					<div class="cardBottom">Bottom</div>
+		<div class="card cardPair1">
+			<div class="cardContent">
+				<div class="cardTop">Top</div>
+				<div class="cardBottom">
+					<img src="/Images/crown.jpg">
 				</div>
+				
 			</div>
-		<div class="cardPair2">
+		</div>
+
+		<div class="card cardPair2">
 			<div class="cardContent">
 				<div class="cardTop">Top</div>
 				<div class="cardBottom">Bottom</div>
 			</div>
 		</div>
 
-			<div class="cardPair2">
-				<div class="cardContent">
-					<div class="cardTop">Top</div>
-					<div class="cardBottom">Bottom</div>
-				</div>
-			</div>
-
-			<div class="cardPair3">
+		<div class="card cardPair2">
 			<div class="cardContent">
 				<div class="cardTop">Top</div>
 				<div class="cardBottom">Bottom</div>
 			</div>
 		</div>
 
-			<div class="cardPair3">
-				<div class="cardContent">
-					<div class="cardTop">Top</div>
-					<div class="cardBottom">Bottom</div>
-				</div>
-			</div>
-		<div class="cardPair4">
+		<div class="card cardPair3">
 			<div class="cardContent">
 				<div class="cardTop">Top</div>
 				<div class="cardBottom">Bottom</div>
 			</div>
 		</div>
 
-			<div class="cardPair4">
-				<div class="cardContent">
-					<div class="cardTop">Top</div>
-					<div class="cardBottom">Bottom</div>
-				</div>
+		<div class="card cardPair3">
+			<div class="cardContent">
+				<div class="cardTop">Top</div>
+				<div class="cardBottom">Bottom</div>
 			</div>
-		
-		
 		</div>
 
-	</body>
+		<div class="card cardPair4">
+			<div class="cardContent">
+				<div class="cardTop">Top</div>
+				<div class="cardBottom">Bottom</div>
+			</div>
+		</div>
+
+		<div class="card cardPair4">
+			<div class="cardContent">
+				<div class="cardTop">Top</div>
+				<div class="cardBottom">Bottom</div>
+			</div>
+		</div>
+
+</div>
+
+</body>
 
 </html>
