--- a/tp6/index.html
+++ b/tp6/index.html
@@ -18,6 +18,7 @@
 		<div class="Predictions">First Predictions</div>
 		<div class="Predictions">Second Predictions</div>
 		<div class="Predictions">Third Predictions</div>
+		<div class="Predictions">Fourth Predictions</div>
 	</div>
 </main>
 
