added images to cards

--- a/tp5/index.html
+++ b/tp5/index.html
@@ -14,14 +14,16 @@
 	
 		<div class="card cardPair1">
 			<div class="cardContent">
-				<div class="cardTop">Top</div>
-				<div class="cardBottom">Bottom</div>
+				<div class="cardTop"></div>
+				<div class="cardBottom">
+					<img src="/Images/crown.jpg">
+					</div>
 			</div>
 		</div>
 
 		<div class="card cardPair1">
 			<div class="cardContent">
-				<div class="cardTop">Top</div>
+				<div class="cardTop"></div>
 				<div class="cardBottom">
 					<img src="/Images/crown.jpg">
 				</div>
@@ -31,43 +33,50 @@
 
 		<div class="card cardPair2">
 			<div class="cardContent">
-				<div class="cardTop">Top</div>
-				<div class="cardBottom">Bottom</div>
+				<div class="cardTop"></div>
+				<div class="cardBottom">
+					<img src="/Images/flower.jpg">
+</div>
 			</div>
 		</div>
 
 		<div class="card cardPair2">
 			<div class="cardContent">
-				<div class="cardTop">Top</div>
-				<div class="cardBottom">Bottom</div>
+				<div class="cardTop"></div>
+				<div class="cardBottom">
+					<img src="/Images/flower.jpg"></div>
 			</div>
 		</div>
 
 		<div class="card cardPair3">
 			<div class="cardContent">
-				<div class="cardTop">Top</div>
-				<div class="cardBottom">Bottom</div>
+				<div class="cardTop"></div>
+				<div class="cardBottom">
+					<img src="/Images/Train.jpg">
+				</div>
 			</div>
 		</div>
 
 		<div class="card cardPair3">
 			<div class="cardContent">
-				<div class="cardTop">Top</div>
-				<div class="cardBottom">Bottom</div>
+				<div class="cardTop"></div>
+				<div class="cardBottom"><img src="/Images/Train.jpg"></div>
 			</div>
 		</div>
 
 		<div class="card cardPair4">
 			<div class="cardContent">
-				<div class="cardTop">Top</div>
-				<div class="cardBottom">Bottom</div>
+				<div class="cardTop"></div>
+				<div class="cardBottom">
+					<img src="/Images/butterfly.jpg">
+				</div>
 			</div>
 		</div>
 
 		<div class="card cardPair4">
 			<div class="cardContent">
-				<div class="cardTop">Top</div>
-				<div class="cardBottom">Bottom</div>
+				<div class="cardTop"></div>
+				<div class="cardBottom"><img src="/Images/butterfly.jpg"></div>
 			</div>
 		</div>
 
