--- a/tp5/index.html
+++ b/tp5/index.html
@@ -80,6 +80,75 @@
 			</div>
 		</div>
 
+		<div class="card cardPair1">
+			<div class="cardContent">
+				<div class="cardTop"></div>
+				<div class="cardBottom">
+					<img src="/Images/Tree.jpg">
+					</div>
+			</div>
+		</div>
+
+		<div class="card cardPair1">
+			<div class="cardContent">
+				<div class="cardTop"></div>
+				<div class="cardBottom">
+					<img src="/Images/Tree.jpg">
+				</div>
+				
+			</div>
+		</div>
+
+		<div class="card cardPair2">
+			<div class="cardContent">
+				<div class="cardTop"></div>
+				<div class="cardBottom">
+					<img src="/Images/teddy bear.jpg">
+</div>
+			</div>
+		</div>
+
+		<div class="card cardPair2">
+			<div class="cardContent">
+				<div class="cardTop"></div>
+				<div class="cardBottom">
+					<img src="/Images/teddy bear.jpg"></div>
+			</div>
+		</div>
+
+		<div class="card cardPair3">
+			<div class="cardContent">
+				<div class="cardTop"></div>
+				<div class="cardBottom">
+					<img src="/Images/dog.jpg">
+				</div>
+			</div>
+		</div>
+
+		<div class="card cardPair3">
+			<div class="cardContent">
+				<div class="cardTop"></div>
+				<div class="cardBottom"><img src="/Images/dog.jpg"></div>
+			</div>
+		</div>
+
+		<div class="card cardPair4">
+			<div class="cardContent">
+				<div class="cardTop"></div>
+				<div class="cardBottom">
+					<img src="/Images/candy.jpg">
+				</div>
+			</div>
+		</div>
+
+		<div class="card cardPair4">
+			<div class="cardContent">
+				<div class="cardTop"></div>
+				<div class="cardBottom"><img src="/Images/candy.jpg"></div>
+			</div>
+		</div>
+
+
 </div>
 
 </body>
