--- a/tp6/index.html
+++ b/tp6/index.html
@@ -16,38 +16,42 @@
 	<main>
 
 		<div id="currentInfo">
+
 			<div id="currentTemp">47*F</div>
-			<div= id="currentStatus">Sunny</div>
+			<div id="currentStatus">Sunny</div>
 		</div>
 
 		<div id="currentHumidty">58%</div>
 
 		<div id="currentWind">3 mph</div>
-
-		<div id="futureInfo">
-			<div class="futureTemp">60*f</div>
-			<div class="futureWind">2mph</div>
-			<div class="futureStatus">cloudy</div>
+	 </div>
+		
+	<div id="futureInfo”>
+		
+		<div class="futureDay">
+		<div class="futureTemp">60*f</div>
+		<div class="futureWind">2mph</div>
+		<div class="futureStatus">cloudy</div>
 		</div>
 
-		<div id="futureInfo">
+		<div class="futureDay">
 			<div class="futureTemp">54*f</div>
 			<div class="futureWind">5 mph</div>
 			<div class="futureStatus">rainy</div>
 		</div>
 
-		<div id="futureInfo">
+		<div Class="futureDay">
 			<div class="futureTemp">65*f</div>
 			<div class="futureWind">1 mph</div>
 			<div class="futureStatus"> sunny</div>
 		</div>
 
-		<div id="futureInfo">
+		<div id="futureDay">
 			<div class="futureTemp">70*f</div>
 			<div class="futureWind">2 mph</div>
 			<div class="futureStatus"> Sunny</div>
-		</div>
 	</div>
+</div>
 
 	</main>
 </body>
