Added mutiple columns

--- a/tp6/index.html
+++ b/tp6/index.html
@@ -26,7 +26,7 @@
 		<div id="currentWind">3 mph</div>
 	 </div>
 		
-	<div id="futureInfo”>
+	<div id="futureInfo">
 		
 		<div class="futureDay">
 		<div class="futureTemp">60*f</div>
@@ -46,7 +46,7 @@
 			<div class="futureStatus"> sunny</div>
 		</div>
 
-		<div id="futureDay">
+		<div class="futureDay">
 			<div class="futureTemp">70*f</div>
 			<div class="futureWind">2 mph</div>
 			<div class="futureStatus"> Sunny</div>
